# azure-ai-foundry

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SETUP_INSTRUCTIONS.md  TDD_PLAN_PRIVATE_FIELDS.md  TDD_PLAN_QUALITY_FIXES.md
.claude/: plan.md  settings.local.json
.claude/commands/: plan-tdd.md
.claude/plans/: quality-fixes-tdd.md  quality-improvements-tdd.md  v0.4.0-tools-tdd.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: TDD_PLAN_QUALITY_IMPROVEMENTS.md  TDD_PLAN_TRACING.md  TDD_PLAN_v0.2.0.md
sdk/azure_ai_foundry_agents/: Cargo.toml  README.md
sdk/azure_ai_foundry_agents/src/: agent.rs  file.rs  lib.rs  message.rs  models.rs  run.rs  run_step.rs  thread.rs  vector_store.rs
sdk/azure_ai_foundry_agents/tests/: integration_tests.rs
sdk/azure_ai_foundry_core/: Cargo.toml  README.md
sdk/azure_ai_foundry_core/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs
sdk/azure_ai_foundry_models/: Cargo.toml  README.md
sdk/azure_ai_foundry_models/src/: audio.rs  chat.rs  embeddings.rs  images.rs  lib.rs  responses.rs
sdk/azure_ai_foundry_safety/: Cargo.toml  README.md
sdk/azure_ai_foundry_safety/src/: blocklist.rs  image.rs  lib.rs  models.rs  prompt_shields.rs  protected_material.rs  text.rs
sdk/azure_ai_foundry_tools/: Cargo.toml  README.md
sdk/azure_ai_foundry_tools/src/: document_intelligence.rs  lib.rs  models.rs  vision.rs
