[workspace]
resolver = "2"
members = [
    "sdk/azure_ai_foundry_core",
    "sdk/azure_ai_foundry_models",
    "sdk/azure_ai_foundry_agents",
    "sdk/azure_ai_foundry_tools",
    "sdk/azure_ai_foundry_safety",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/bzsanti/azure-ai-foundry"
homepage = "https://github.com/bzsanti/azure-ai-foundry"
keywords = ["azure", "ai", "foundry", "microsoft", "openai"]
categories = ["api-bindings", "web-programming::http-client"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Allow patterns commonly used in this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "warn"

[workspace.dependencies]
# Azure SDK
azure_core = "0.32"
azure_identity = "0.32"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP & serialization
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Streaming
futures = "0.3"
tokio-stream = "0.1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Testing
wiremock = "0.6"

# Binary data
bytes = "1"

# Utils
url = "2"
secrecy = "0.10"
fastrand = "2"
