[package]
name = "azure_ai_foundry_agents"
description = "AI Agent Service client for Azure AI Foundry - Rust SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
azure_ai_foundry_core = { path = "../azure_ai_foundry_core", version = "0.2.0" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
tracing-test = "0.2"

[features]
integration-tests = []
