[package]
name = "azure_ai_foundry_core"
description = "Core types, authentication, and HTTP client for the Azure AI Foundry Rust SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
azure_core.workspace = true
azure_identity.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
secrecy.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
async-trait = "0.1"
serial_test = "3.2"
